# Change file for Plack::App::SeeAlso

{{$NEXT}}
    Simplify and document server properties    

0.01     2012-03-07
    Initial preview release at CPAN