@@ -20,7 +20,7 @@ match = ^examples/*
 match = ^share/example*
 
 ; Be pedantic
-[Test::Perl::Critic]
+; [Test::Perl::Critic]
 
 ; Replace {{$NEXT}} in first line of Changes with version number and timestamp
 [NextRelease]
